--- a/slides.jade
+++ b/slides.jade
@@ -241,7 +241,13 @@ article
       li uses IPFS node to serve content with hashes
       li fetches non-hashed content from npm and hashes it
       li proxies all other requests to public npm registry (publishing etc)
-  
+
+  section
+    h1 Demo
+    aside(style='font-size: 50px')
+      li ipfs-npm init
+      li ipfs-npm install --save bignumber
+
   section
     img(src='images/ipfs-npm.png')
     aside(style='font-size: 50px')
