--- a/slides.jade
+++ b/slides.jade
@@ -49,7 +49,7 @@ article
     h1 Content addressing
     aside(style='font-size: 50px')
       li What is content addressing?
- 
+
   section
     p http://example.com/cat.gif
     img(src='images/cat.gif')
@@ -113,7 +113,7 @@ article
     p Centralised
     img(src='images/centralised.png')
     aside(style='font-size: 50px')
-      li Single point of faliure
+      li Single point of failure
       li Too much traffic to central node
   
   section
@@ -156,7 +156,7 @@ article
     aside(style='font-size: 50px')
       li Each node makes some or all of the chunks available
       li Content is distributed through the network
-  
+
   section(data-bespoke-backdrop='sunrise')
     p The network resolves content based on the Content Identifier
     img(src='images/ipfs-illustrations-how-4.svg')
@@ -286,4 +286,3 @@ article
       pre https://github.com/ipfs-shipyard/ipfs-npm-registry-mirror
     p Alex Potsides
     small @achingbrain
-    
