--- a/slides.jade
+++ b/slides.jade
@@ -108,8 +108,14 @@ article
 
   section
     h1 Demo
+
+  section
+    div(id='terminal')
     aside(style='font-size: 50px')
-      li ipfs-npm init
+      li npm install ipfs-npm
+      li mkdir foo
+      li cd foo
+      li ipfs-npm init -y
       li ipfs-npm install --save bignumber
       li offline
       li turn off wifi
@@ -151,6 +157,7 @@ article
     li.bullet Cache npm modules for you
     li.bullet Connected to the IPFS network
     li.bullet Publish IPNS names for your published modules
+    li.bullet IPFS Camp Science Fair Project!
 
   section
     h2 Thanks!
