--- a/slides.jade
+++ b/slides.jade
@@ -23,7 +23,7 @@ article
     aside(style='font-size: 50px')
       li npm
       li largest package registry in the world
-      li over 850k packages
+      li over 1m packages
       li over 36 billion downloads a month
 
   section
